--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 eclipse/.metadata/.plugins/org.eclipse.debug.core/.launches/Client.launch
 bin/assets/nuclearcraftaddon/textures/.DS_Store
+run/crash-reports
